--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://kostya778899.github.io/pizza-test-00/",
   "name": "pizza-test-00",
   "version": "0.1.0",
   "private": true,
