--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pizza-test-00",
   "version": "0.1.0",
-  "homepage": "https://kostya778899.github.io/pizza-test-00/",
+  "homepage": "https://kostya778899.github.io/pizza-test-00",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
